#
# blueball
# Simulation package
# pyproject
#

[project]
name = "blueball-simulation"
version = "0.0.1"
description = "Blueball game simulation logic."

[build-system]
requires = [
  "hatchling",
  "aioquic==0.9.25",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "simulation",
  "network",

]
